replicating bug on mobile

--- a/web/app/themes/comeon/assets/styles/layouts/_front-page.scss
+++ b/web/app/themes/comeon/assets/styles/layouts/_front-page.scss
@@ -57,10 +57,10 @@
 			@include shift(1);
 		}
 	}
-	.--centered {
+	@at-root #{&}--centered {
 		text-align: center;
 	}
-	.--medium {
+	@at-root #{&}--medium {
 		font-weight: $medium;
 	}
 	a {
